# filemanager

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: core.py
valk_filemanager/: __init__.py
