[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valk-filemanager"
version = "0.3.2"
authors = [
  { name="Valk.py", email="valk.py.dev@gmail.com"},
]
description = "Une bibliothèque Python pour gérer simplement les fichiers JSONs, les créer, les charger et écrire dedans facilement, en vérifiant que leur structure est correcte."
requires-python = ">=3.8"
readme="README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://valk-solutions.fr/projets/valk-filemanager/"

[tool.hatch.build.targets.wheel]
packages = ["valk_filemanager"]